# Nano-Framework2.0

./: .gitignore  1trainoutput.txt  CMakeLists copy.txt  CMakeLists.txt  Doxyfile  README.md  c4_200M_tokenizer.py  c4_200M_tokenizerv2.py  callgrind.out.80189  compare_grammar_models.py  encoder.json:Zone.Identifier  fastfeedforward  floattrain_gpt2.cpp  gpt2.hpp  gpt2_training.csv  gpt4_grading_prompt.txt  inference.hpp  inference_gpt2.cpp  inference_gpt2_cpu  inference_test.cpp  jfleg_converter.py  jfleg_tokenizer.py  json.hpp:Zone.Identifier  nano.hpp  output.txt  plot_training.py  requirements.txt  test_gpt2.cpp  tinystoriesbench.py  train_gpt2.cpp  train_gpt2.cu  train_gpt2.py  train_gpt2_cpu_24threads  train_gpt2_cpu_FFF_d2_l50256on4.csv  train_gpt2_cpu_FFF_d3_l50256on4.csv  train_gpt2_cpu_fineweb  train_gpt2_cpu_release  train_gpt2_cpu_releasewithflags  train_gpt2_cpu_tinystories  train_gpt2_cpuv2  (+8 more)
DoxygenOut/html/: AVX512_2BesselFunctions_8h.html  AVX512_2BesselFunctions_8h_source.html  AVX512_2Complex_8h.html  AVX512_2Complex_8h_source.html  AVX512_2PacketMath_8h.html  AVX512_2PacketMath_8h_source.html  AVX512_2SpecialFunctions_8h.html  AVX512_2SpecialFunctions_8h_source.html  AVX512_2TypeCasting_8h.html  AVX512_2TypeCasting_8h_source.html  AVX_2BesselFunctions_8h.html  AVX_2BesselFunctions_8h_source.html  AVX_2Complex_8h.html  AVX_2Complex_8h_source.html  AVX_2PacketMath_8h.html  AVX_2PacketMath_8h_source.html  AVX_2SpecialFunctions_8h.html  AVX_2SpecialFunctions_8h_source.html  AVX_2TypeCasting_8h.html  AVX_2TypeCasting_8h_source.html  AlignedBox_8h.html  AlignedBox_8h_source.html  AltiVec_2Complex_8h.html  AltiVec_2Complex_8h_source.html  AltiVec_2PacketMath_8h.html  AltiVec_2PacketMath_8h_source.html  AmbiVector_8h.html  AmbiVector_8h_source.html  Amd_8h.html  Amd_8h_source.html  AngleAxis_8h.html  AngleAxis_8h_source.html  ArithmeticSequence_8h.html  ArithmeticSequence_8h_source.html  ArpackSelfAdjointEigenSolver_8h.html  ArpackSelfAdjointEigenSolver_8h__incl.map  ArpackSelfAdjointEigenSolver_8h__incl.md5  ArpackSelfAdjointEigenSolver_8h_source.html  ArrayBase_8h.html  ArrayBase_8h__incl.map  (+46687 more)
DoxygenOut/latex/: AVX512_2BesselFunctions_8h.tex  AVX512_2BesselFunctions_8h_source.tex  AVX512_2Complex_8h.tex  AVX512_2Complex_8h_source.tex  AVX512_2PacketMath_8h.tex  AVX512_2PacketMath_8h_source.tex  AVX512_2TypeCasting_8h.tex  (+26152 more)
NanoDash/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  NanoDash.hpp  README.md  TrainingVisualizer.cpp  TrainingVisualizer.hpp  TrainingVisualizer.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test_writer  test_writer.cpp  test_writerv2  test_writerv2.cpp  training_metrics.csv  visualization_data.csv  visualization_data1.csv  writer.hpp
NanoDashWriter/: README.md  test_Nano_Dash.cpp  test_writer.cpp  test_writerv2.cpp  training_metrics.csv  visualization_data.csv  visualization_data.txt
OriginalStuff/: CMakeLists.txt  gpt.hpp  nn.hpp  optim.hpp
OriginalStuff (Dont need)/: LayerNorm.hpp  gpt.hpp  nnhead.hpp
TakeCodeFromHere/: CMakeLists.txt  gpt.hpp  gpt2.hpp  nn.hpp  test.txt  train_gpt2.cpp
grammar_corrections/: jfleg_attempt1_results.txt  jfleg_attempt2_results.txt  jfleg_attempt3_results.txt
html/: annotated.html  classes.html  doxygen_crawl.html  files.html  gpt2_8hpp_source.html  nano_8hpp_source.html  structgpt2_1_1GPT2-members.html  structgpt2_1_1GPT2.html  structgpt2_1_1GPT2Config-members.html  structgpt2_1_1GPT2Config.html
jfleg/: jfleg_test.txt  jfleg_train.txt  jfleg_val.txt
latex/: annotated.tex  files.tex  gpt2_8hpp_source.tex  nano_8hpp_source.tex  refman.tex  structgpt2_1_1GPT2.tex  structgpt2_1_1GPT2Config.tex
llmc/: gpt2.txt  rand.h  test_tokenizer.cpp  tokenizer.cpp  tokenizer.hpp  unistd.h  utils.h
nano-distributed/: CMakeLists.txt  README.md
nano-distributed/examples/: data_parallel_training.cpp  parameter_server.cpp
nano-distributed/include/nano-distributed/: distributed.hpp
nano-distributed/include/nano-distributed/comm/: communicator.hpp  mpi_wrapper.hpp  tcp_socket.hpp
nano-distributed/include/nano-distributed/parallel/: data_parallel.hpp  model_parallel.hpp  parameter_server.hpp
nano-distributed/include/nano-distributed/sync/: atomic.hpp  barrier.hpp  mutex.hpp
nano-distributed/include/nano-distributed/utils/: serialization.hpp  timer.hpp
nano-distributed/tests/: comm_tests.cpp  parallel_tests.cpp  utils_tests.cpp
nanolib/: AttentionLayer.hpp  CMakeLists.txt  DropOut.hpp  LinearLayer.hpp  MLP.hpp  NormalizationLayer.hpp  SoftMax.hpp  nano.hpp  nn.hpp
nanolib/nn/: AttentionLayer.hpp  Block.hpp  CMakeLists.txt  Embedding.hpp  LayerNorm.hpp  Linear.hpp  Loss.hpp  MLP.hpp  MatMul.hpp  Parameter.hpp  SoftMax.hpp  gpt.hpp  nn.hpp  nnhead.hpp
nanolib/optim/: CMakeLists.txt  optim.hpp
nanolib/tensor/: CMakeLists.txt  tensor_types.hpp  tensor_util.hpp
nanolib/utils/: CMakeLists.txt
nanolib2.0/: CMakeLists.txt  gpt.hpp  gpt2.hpp  nano.hpp  optim.hpp  train_gpt2.cpp
nn/: :( Parameter.hpp  AttentionLayer.hpp  Block.hpp  CMakeLists.txt  Embedding.hpp  LayerNorm.hpp  Linear.hpp  Loss.hpp  MLP.hpp  MatMul.hpp  Parameter.hpp  SoftMax.hpp  Softmax.hpp  fastfeedforward.hpp  fff_training_metrics.csv  gpt.hpp  mlp_training_metrics.csv  nn.hpp  sigmoid.hpp  testCMakeLists.txt  test_FFFBlock.cpp  test_MLP_training.cpp  test_attentionlayer.cpp  test_autograd.cpp  test_block.cpp  test_embedding  test_embedding.cpp  test_fastfeedforward.cpp  test_fastfeedforward_training.cpp  test_gpt.cpp  test_grokfast.cpp  test_layernorm  test_layernorm.cpp  test_linear.cpp  test_loss  test_loss.cpp  test_matmul.cpp  test_mlp.cpp  test_parameter  test_parameter.cpp  (+3 more)
optimizer/: optim.hpp  testCMakeLists.txt  test_optim.cpp
tensor/: :((fixed_point.hpp  :(fixed_point.hpp  CMakeLists.txt  Test.hpp  fixed_point.hpp  tanh_results.csv  tensor_types.hpp  tensor_util.hpp  test_fixed_point  test_fixed_point.cpp  test_fpm  test_fpm.cpp  test_tanh  test_tanh.cpp  test_tensor_types.cpp  test_tensor_util  test_tensor_util.cpp  util_nothing.hpp  util_utype_helper.hpp
tensor/fpm/: fixed.hpp  fpm.hpp  math.hpp
(+297 files in other folders)
